# sqlite3-spatialite-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
